--- a/src/pages/community/CommunityPage.css
+++ b/src/pages/community/CommunityPage.css
@@ -65,6 +65,7 @@ body{
   position:relative;
   width: 100%;
   height: 100px;
+  padding-left: 10px;
 
 }
 
@@ -81,6 +82,7 @@ body{
 
 .top_title{
   margin:0 auto;
+  padding-left: 16px;
   padding-top: 30px;
   width: 1200px;
   height: 20px;
